# aa-base-plugin

./: .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  package-lock.json  package.json  pyproject.toml  tox.ini
.github/workflows/: automated-checks.yml
aa_base_plugin/: __init__.py  admin.py  apps.py  auth_hooks.py  providers.py  urls.py  views.py
aa_base_plugin/static/aa_base_plugin/javascript/: aa-base-plugin.js
aa_base_plugin/templates/aa_base_plugin/: base.html  index.html
aa_base_plugin/templates/aa_base_plugin/bundles/: aa-base-plugin-css.html  aa-base-plugin-js.html
aa_base_plugin/templates/aa_base_plugin/partials/navigation/: left-navigation.html
testauth/settings/: local.py
