[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-base-plugin"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "John Doe", email = "john.doe@example.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [ "description", "version" ]
dependencies = [
    "allianceauth>=4.11,<5",
]
optional-dependencies.test = [
]

urls.Changelog = "https://gitlab.com/astrum-mechanica/aa-base-plugin/-/blob/master/CHANGELOG.md"
urls.Documentation = "https://gitlab.com/astrum-mechanica/aa-base-plugin/-/blob/master/README.md"
urls.Homepage = "https://gitlab.com/astrum-mechanica/aa-base-plugin"
urls.Source = "https://gitlab.com/astrum-mechanica/aa-base-plugin"
urls.Tracker = "https://gitlab.com/astrum-mechanica/aa-base-plugin/-/issues"

[tool.hatch.version]
path = "aa_base_plugin/__init__.py"

[tool.hatch.build]
include = [
    "/aa_base_plugin",
]
